--- a/output_files/dashboard_2025_08.html
+++ b/output_files/dashboard_2025_08.html
@@ -327,7 +327,7 @@
             </div>
             <h1 id="mainTitle">QIP 인센티브 계산 결과 <span class="version-badge">v4.2</span></h1>
             <p id="mainSubtitle">2025년 8월 인센티브 지급 현황</p>
-            <p id="generationDate" style="color: white; font-size: 0.9em; margin-top: 10px; opacity: 0.9;">보고서 생성일: 2025년 08월 26일 08:46</p>
+            <p id="generationDate" style="color: white; font-size: 0.9em; margin-top: 10px; opacity: 0.9;">보고서 생성일: 2025년 08월 26일 08:55</p>
         </div>
         
         <div class="content p-4">
@@ -909,7 +909,9 @@
                                     // 출근 카테고리 평가
                                     if (attendance.length > 0) {
                                         const attendanceNA = attendance.every(c => c.is_na || c.actual === 'N/A');
-                                        const attendanceMet = !attendanceNA && attendance.every(c => c.is_met);
+                                        // N/A가 아닌 조건들만 필터링하여 평가
+                                        const applicableAttendance = attendance.filter(c => !c.is_na && c.actual !== 'N/A');
+                                        const attendanceMet = applicableAttendance.length > 0 && applicableAttendance.every(c => c.is_met);
                                         if (attendanceNA) {
                                             badges.push('<span class="badge" style="background-color: #999;" title="출근 조건">출근: N/A</span>');
                                         } else if (attendanceMet) {
@@ -922,7 +924,9 @@
                                     // AQL 카테고리 평가
                                     if (aql.length > 0) {
                                         const aqlNA = aql.every(c => c.is_na || c.actual === 'N/A');
-                                        const aqlMet = !aqlNA && aql.every(c => c.is_met);
+                                        // N/A가 아닌 조건들만 필터링하여 평가
+                                        const applicableAql = aql.filter(c => !c.is_na && c.actual !== 'N/A');
+                                        const aqlMet = applicableAql.length > 0 && applicableAql.every(c => c.is_met);
                                         if (aqlNA) {
                                             badges.push('<span class="badge" style="background-color: #999;" title="AQL 조건">AQL: N/A</span>');
                                         } else if (aqlMet) {
@@ -937,7 +941,9 @@
                                     // 5PRS 카테고리 평가
                                     if (prs.length > 0) {
                                         const prsNA = prs.every(c => c.is_na || c.actual === 'N/A');
-                                        const prsMet = !prsNA && prs.every(c => c.is_met);
+                                        // N/A가 아닌 조건들만 필터링하여 평가
+                                        const applicablePrs = prs.filter(c => !c.is_na && c.actual !== 'N/A');
+                                        const prsMet = applicablePrs.length > 0 && applicablePrs.every(c => c.is_met);
                                         if (prsNA) {
                                             badges.push('<span class="badge" style="background-color: #999;" title="5PRS 조건">5PRS: N/A</span>');
                                         } else if (prsMet) {
