--- a/output_files/Incentive_Dashboard_2025_09_Version_5.html
+++ b/output_files/Incentive_Dashboard_2025_09_Version_5.html
@@ -1279,7 +1279,7 @@
             </div>
             <h1 id="mainTitle">QIP 인센티브 계산 결과 <span class="version-badge">v5.1</span></h1>
             <p id="mainSubtitle">2025년 9월 인센티브 지급 현황</p>
-            <p id="generationDate" style="color: white; font-size: 0.9em; margin-top: 10px; opacity: 0.9;" data-year="2025" data-month="09" data-day="22" data-hour="08" data-minute="20">보고서 생성일: 2025년 09월 22일 08:20</p>
+            <p id="generationDate" style="color: white; font-size: 0.9em; margin-top: 10px; opacity: 0.9;" data-year="2025" data-month="09" data-day="22" data-hour="08" data-minute="39">보고서 생성일: 2025년 09월 22일 08:39</p>
             <div id="dataPeriodSection" style="color: white; font-size: 0.85em; margin-top: 15px; opacity: 0.85; line-height: 1.6;">
                 <p id="dataPeriodTitle" style="margin: 5px 0; font-weight: bold;">📊 사용 데이터 기간:</p>
                 <p id="incentiveDataPeriod" style="margin: 3px 0; padding-left: 20px;" data-year="2025" data-month="09" data-startday="01" data-endday="30">• 인센티브 데이터: 2025년 09월 01일 ~ 30일</p>
@@ -2713,12 +2713,14 @@
 
                         <!-- 제외된 직급 안내 -->
                         <div class="alert alert-info mb-3" style="background: #e3f2fd; border: 1px solid #1976d2; color: #0d47a1;">
-                            <i class="fas fa-info-circle"></i> <strong>참고:</strong> AQL INSPECTOR, AUDIT & TRAINING TEAM, MODEL MASTER 직급은 조직도에서 제외되었습니다.
+                            <i class="fas fa-info-circle"></i>
+                            <strong><span id="orgChartNoteLabel">참고</span>:</strong>
+                            <span id="orgChartExcludedPositions">AQL INSPECTOR, AUDIT & TRAINING TEAM, MODEL MASTER 직급은 조직도에서 제외되었습니다.</span>
                         </div>
 
                         <!-- 동적 경로 표시 (Breadcrumb) -->
                         <div id="orgBreadcrumb" class="breadcrumb mb-3" style="background: #f8f9fa; padding: 10px; border-radius: 4px;">
-                            <span style="color: #666;">전체 조직</span>
+                            <span id="orgBreadcrumbText" style="color: #666;">전체 조직</span>
                         </div>
 
                         <!-- 필터 옵션 -->
@@ -2766,8 +2768,8 @@
                         <div id="orgChartContainer" class="collapsible-tree">
                             <!-- 제목 및 설명 -->
                             <div class="org-header">
-                                <h4 id="orgChartTitle">TYPE-1 관리자 인센티브 구조</h4>
-                                <p id="orgChartSubtitle" class="text-muted">TYPE-1 managers receiving incentive based on subordinate performance</p>
+                                <h4 id="orgChartTitleMain">TYPE-1 관리자 인센티브 구조</h4>
+                                <p id="orgChartSubtitleMain" class="text-muted">TYPE-1 managers receiving incentive based on subordinate performance</p>
                             </div>
 
                             <!-- 검색 및 필터 컨트롤 -->
@@ -3065,6 +3067,11 @@
       "en": "Org Chart",
       "vi": "Sơ đồ tổ chức"
     },
+    "orgchart": {
+      "ko": "조직도",
+      "en": "Org Chart",
+      "vi": "Sơ đồ tổ chức"
+    },
     "validation": {
       "ko": "요약 및 시스템 검증",
       "en": "Summary & System Validation",
@@ -3138,6 +3145,11 @@
         "en": "LINE LEADER Average × 2.5",
         "vi": "Trung bình LINE LEADER × 2.5"
       },
+      "assistantManager": {
+        "ko": "LINE LEADER 평균 × 3",
+        "en": "LINE LEADER Average × 3",
+        "vi": "Trung bình LINE LEADER × 3"
+      },
       "aManager": {
         "ko": "LINE LEADER 평균 × 3",
         "en": "LINE LEADER Average × 3",
@@ -3148,6 +3160,16 @@
         "en": "Lower Manager Average × 3.5",
         "vi": "Trung bình quản lý cấp dưới × 3.5"
       }
+    },
+    "entireOrganization": {
+      "ko": "전체 조직",
+      "en": "Entire Organization",
+      "vi": "Toàn bộ tổ chức"
+    },
+    "modalTitle": {
+      "ko": "인센티브 계산 상세",
+      "en": "Incentive Calculation Details",
+      "vi": "Chi tiết tính khuyến khích"
     },
     "filters": {
       "allTypes": {
@@ -3261,11 +3283,6 @@
       "ko": "인센티브 미수령",
       "en": "Incentive Not Received",
       "vi": "Chưa nhận thưởng"
-    },
-    "modalTitle": {
-      "ko": "인센티브 계산 상세",
-      "en": "Incentive Calculation Details",
-      "vi": "Chi tiết tính khuyến khích"
     },
     "modalLabels": {
       "actualIncentive": {
@@ -8773,7 +8790,10 @@
             
             // Talent Program 섹션 텍스트 업데이트
             updateTalentProgramTexts();
-            
+
+            // Org Chart 텍스트 업데이트
+            updateOrgChartUIText();
+
             // 차트 업데이트 (차트가 있는 경우)
             if (window.pieChart) {
                 updateChartLabels();
@@ -14032,31 +14052,49 @@
         function updateOrgChartUIText() {
             // 제목 및 설명 업데이트
             const titleEl = document.getElementById('orgChartTitle');
-            if (titleEl) titleEl.textContent = getTranslation('tabs.orgchart');
+            if (titleEl) titleEl.textContent = getTranslation('tabs.orgChart', currentLanguage) || getTranslation('tabs.orgchart', currentLanguage);
 
             const subtitleEl = document.getElementById('orgChartSubtitle');
-            if (subtitleEl) subtitleEl.textContent = getTranslation('orgChart.subtitle');
+            if (subtitleEl) subtitleEl.textContent = getTranslation('orgChart.subtitle', currentLanguage);
+
+            // 메인 제목 업데이트
+            const titleMainEl = document.getElementById('orgChartTitleMain');
+            if (titleMainEl) titleMainEl.textContent = getTranslation('orgChart.title', currentLanguage);
+
+            const subtitleMainEl = document.getElementById('orgChartSubtitleMain');
+            if (subtitleMainEl) subtitleMainEl.textContent = getTranslation('orgChart.subtitle', currentLanguage);
+
+            // 참고 레이블 및 제외된 직급 안내
+            const noteLabelEl = document.getElementById('orgChartNoteLabel');
+            if (noteLabelEl) noteLabelEl.textContent = getTranslation('orgChart.noteLabel', currentLanguage);
+
+            const excludedEl = document.getElementById('orgChartExcludedPositions');
+            if (excludedEl) excludedEl.textContent = getTranslation('orgChart.excludedPositions', currentLanguage);
+
+            // 빵 부스러기 (전체 조직)
+            const breadcrumbEl = document.getElementById('orgBreadcrumbText');
+            if (breadcrumbEl) breadcrumbEl.textContent = getTranslation('orgChart.entireOrganization', currentLanguage);
 
             // 검색 placeholder
             const searchEl = document.getElementById('orgSearchInput');
-            if (searchEl) searchEl.placeholder = getTranslation('orgChart.searchPlaceholder');
+            if (searchEl) searchEl.placeholder = getTranslation('orgChart.searchPlaceholder', currentLanguage);
 
             // 버튼 텍스트
             const expandEl = document.getElementById('expandAllText');
-            if (expandEl) expandEl.textContent = getTranslation('orgChart.expandAll');
+            if (expandEl) expandEl.textContent = getTranslation('orgChart.expandAll', currentLanguage);
 
             const collapseEl = document.getElementById('collapseAllText');
-            if (collapseEl) collapseEl.textContent = getTranslation('orgChart.collapseAll');
+            if (collapseEl) collapseEl.textContent = getTranslation('orgChart.collapseAll', currentLanguage);
 
             // 범례
             const legendTitleEl = document.getElementById('legendTitle');
-            if (legendTitleEl) legendTitleEl.textContent = getTranslation('orgChart.legendTitle');
+            if (legendTitleEl) legendTitleEl.textContent = getTranslation('orgChart.legendTitle', currentLanguage);
 
             const legendReceivedEl = document.getElementById('legendIncentiveReceived');
-            if (legendReceivedEl) legendReceivedEl.textContent = getTranslation('orgChart.incentiveReceived');
+            if (legendReceivedEl) legendReceivedEl.textContent = getTranslation('orgChart.incentiveReceived', currentLanguage);
 
             const legendNoIncentiveEl = document.getElementById('legendNoIncentive');
-            if (legendNoIncentiveEl) legendNoIncentiveEl.textContent = getTranslation('orgChart.noIncentive');
+            if (legendNoIncentiveEl) legendNoIncentiveEl.textContent = getTranslation('orgChart.noIncentive', currentLanguage);
         }
 
         // 조직도 초기화 함수
